prodMetadata/src/objects/Stat__c.object
<CustomObject>
    <description>Statistics relevant to our work</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Description__c</fullName>
        <description>Description to help explain what the amount refers to.</description>
        <inlineHelpText>Description to help explain what the amount refers to.</inlineHelpText>
        <label>Amount Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <description>What type of measurement will you make for this stat?</description>
        <inlineHelpText>What type of measurement will you make for this stat?</inlineHelpText>
        <label>Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Times the Rate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <description>Brief description of what this Stat covers</description>
        <inlineHelpText>Brief description of what this Stat covers</inlineHelpText>
        <label>Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Measured__c</fullName>
        <formula>if(isblank(  Measurement_Amount_Date__c ),0,Today() -   Measurement_Amount_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Measurement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>How often does this stat come out?</description>
        <inlineHelpText>How often does this stat come out?</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Irregular</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Stat_link__c</fullName>
        <description>Link to more information about the stat in general, not to the individual measurement.</description>
        <inlineHelpText>Link to more information about the stat in general, not to the individual measurement.</inlineHelpText>
        <label>General Stat link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_Measurement_Expiration_Date__c</fullName>
        <description>Latest date pulled from all Stat Measurements</description>
        <inlineHelpText>Latest date pulled from all Stat Measurements</inlineHelpText>
        <label>Latest Measurement Expiration Date</label>
        <summarizedField>Stat_Measurement__c.Stat_Good_Until__c</summarizedField>
        <summaryForeignKey>Stat_Measurement__c.Stat__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Measurement_Amount_Date__c</fullName>
        <inlineHelpText>The date corresponding with the Measurement Amount.</inlineHelpText>
        <label>Most Recent Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Measurement_Count__c</fullName>
        <label>Measurement Count</label>
        <summaryForeignKey>Stat_Measurement__c.Stat__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Measurement_Sum__c</fullName>
        <label>Measurement Sum</label>
        <summarizedField>Stat_Measurement__c.Amount__c</summarizedField>
        <summaryForeignKey>Stat_Measurement__c.Stat__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Amount__c</fullName>
        <inlineHelpText>This field is set by a trigger which takes the most recent Stat Measurement record based on date.</inlineHelpText>
        <label>Most Recent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Amount_text__c</fullName>
        <formula>text(Most_Recent_Amount__c)</formula>
        <label>Most Recent Amount (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Measurements__c</fullName>
        <description>How many times has this stat been measured</description>
        <inlineHelpText>How many times has this stat been measured</inlineHelpText>
        <label>Number of Measurements</label>
        <summaryForeignKey>Stat_Measurement__c.Stat__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Policy_Issue_records__c</fullName>
        <description>Number of Policy Issue records connected to this Stat</description>
        <inlineHelpText>Number of Policy Issue records connected to this Stat</inlineHelpText>
        <label>Num Policy Issue records</label>
        <summaryForeignKey>Stat_Focus_relationship__c.Related_Stat__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_to_Know__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this Stat should be included in list of &quot;Numbers to Know&quot;.</description>
        <inlineHelpText>Indicates that this Stat should be included in list of &quot;Numbers to Know&quot;.</inlineHelpText>
        <label>Number to Know</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Citation_Info__c</fullName>
        <description>General info related to the Stat in general, not the individual measurement.</description>
        <inlineHelpText>General info related to the Stat in general, not the individual measurement.</inlineHelpText>
        <label>Other Citation Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This stat is not for publication</description>
        <inlineHelpText>This stat is not for publication</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Links__c</fullName>
        <label>Related Links</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stat_Name_and_Value__c</fullName>
        <description>Used to allow decimal point to show in dashboard.</description>
        <formula>Name + &quot; (&quot; +  text(Measurement_Amount_Date__c)  + &quot;):  &quot; +  text(Most_Recent_Amount__c) +  if( ispickval(Amount_Type__c, &quot;Percent&quot;),&quot;%&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Used to allow decimal point to show in dashboard.</inlineHelpText>
        <label>Stat Name and Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stat_Name_and_amount_type__c</fullName>
        <description>Combines Stat Name and Amount Type for dashboard report.</description>
        <formula>Name &amp; &quot; (&quot; &amp;  lower(text(Amount_Type__c)) &amp; &quot;)&quot;</formula>
        <inlineHelpText>Combines Stat Name and Amount Type for dashboard report.</inlineHelpText>
        <label>Stat Name (and amount type)</label>
        <type>Text</type>
    </fields>
    <label>Stat</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Most_Recent_Amount__c</columns>
        <columns>Amount_Type__c</columns>
        <columns>Measurement_Amount_Date__c</columns>
        <columns>Days_Since_Measured__c</columns>
        <columns>Number_to_Know__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Most_Recent_Amount__c</columns>
        <columns>Amount_Type__c</columns>
        <columns>Measurement_Amount_Date__c</columns>
        <columns>Days_Since_Measured__c</columns>
        <columns>Number_to_Know__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Date</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>Created Date</label>
    </listViews>
    <listViews>
        <fullName>Instagram_Stats</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Instagram</value>
        </filters>
        <label>Instagram Stats</label>
    </listViews>
    <listViews>
        <fullName>Numbers_to_Know</fullName>
        <columns>Number_to_Know__c</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Most_Recent_Amount__c</columns>
        <columns>Amount_Type__c</columns>
        <columns>Measurement_Amount_Date__c</columns>
        <columns>Days_Since_Measured__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_to_Know__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Numbers to Know</label>
    </listViews>
    <listViews>
        <fullName>Stats_not_on_a_Policy_Issue</fullName>
        <columns>NAME</columns>
        <columns>Brief_Description__c</columns>
        <columns>Most_Recent_Amount__c</columns>
        <columns>Amount_Type__c</columns>
        <columns>Measurement_Amount_Date__c</columns>
        <columns>Days_Since_Measured__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Num_Policy_Issue_records__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Stats not on a Policy Issue</label>
    </listViews>
    <listViews>
        <fullName>Twitter_Stats</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Twitter</value>
        </filters>
        <label>Twitter Stats</label>
    </listViews>
    <listViews>
        <fullName>employment_stats2</fullName>
        <columns>Stat_Name_and_amount_type__c</columns>
        <columns>Most_Recent_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>unemployment</value>
        </filters>
        <label>employment stats</label>
    </listViews>
    <nameField>
        <label>Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stats</pluralLabel>
    <recordTypes>
        <fullName>Private</fullName>
        <active>true</active>
        <description>Only viewable by research department</description>
        <label>Private</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>